fix: improve image spacing from text

--- a/styles/about.css
+++ b/styles/about.css
@@ -31,6 +31,7 @@
 }
 
 .about-img-container {
+	margin: 1rem 0;
 	display: flex;
 }
 
